# sylpheed-customview

./: .gitignore  .travis.yml  Makefile.am  NEWS  README.md  configure.ac
po/: POTFILES.in
src/: Makefile.am  customview.c  customview.h
